# rpgGame

./: .gitignore  .~lock.Protokol.dotx#  AGENTS.md  CMakeLists.txt  Character.h  Enemy.h  Protokol.dotx  main.cpp
.cache/clangd/index/: BigGun.cpp.65BF7D273257A50F.idx  BigGun.h.DEED9681EBDA7240.idx  BigGuns.cpp.9612990A73F20C7A.idx  BigGuns.h.780EE0471212A642.idx  Character.cpp.5052611BC142CFA3.idx  Character.h.BA3BEC42C7E33872.idx  Enemy.cpp.3C2BF9E8CDB51052.idx  Enemy.cpp.5AA6A87ED71D186D.idx  Enemy.cpp.7A5C11B136513BCE.idx  Enemy.h.1AA46E05FB6D379B.idx  Enemy.h.F260F8948893A707.idx  EnergyWeapon.cpp.635D198DCF331C2F.idx  EnergyWeapon.h.10ABEE6674CD74F6.idx  Ghoul.cpp.6EF3DE87A49AE14B.idx  Ghoul.cpp.C3F8E7F367F8EDCC.idx  Ghoul.h.88153EC541CD21BE.idx  MeleeWeapon.cpp.CB45A2328612BAF4.idx  MeleeWeapon.h.11E7EA29ECFFA4FA.idx  Raider.cpp.EABAD60FCC1AD084.idx  Raider.h.0DA95D01EDBC65E0.idx  Skills.cpp.7F2FDE0CCB1BA5A5.idx  Skills.h.736CE6631043CF2C.idx  SmallGun.cpp.87EC698A49ED20CF.idx  SmallGun.h.FF5204A027ED3350.idx  SuperMutant.cpp.E1B8C5E2CD121C34.idx  SuperMutant.cpp.E68B629C742B65F5.idx  SuperMutant.h.81CF3B2DEF3EA30A.idx  UnarmedWeapon.cpp.CCC49FEC254E0BD5.idx  UnarmedWeapon.h.BC193617DFCAA325.idx  Weapon.cpp.24A61A80553D6F49.idx  Weapon.cpp.8E60BA84E209F767.idx  Weapon.h.01C39351C480E25B.idx  (+2 more)
data/: character.csv  enemies.csv  weapons.csv
lib/: BaseCharacter.h  Character.h  Enemy.h  GameLoop.h  MainCharacter.h  Weapon.h
lib/Enemies/: Enemy.h  Ghoul.h  Raider.h  SuperMutant.h
lib/Weapons/: BigGun.h  BigGuns.h  EnergyWeapon.h  MeleeWeapon.h  SmallGun.h  UnarmedWeapon.h  Weapon.cpp  Weapon.h
src/: BaseCharacter.cpp  Character.cpp  Enemy.cpp  GameLoop.cpp  MainCharacter.cpp  Weapon.cpp
src/Enemies/: Enemy.cpp  Ghoul.cpp  Raider.cpp  SuperMutant.cpp
src/Weapons/: BigGun.cpp  BigGuns.cpp  EnergyWeapon.cpp  MeleeWeapon.cpp  SmallGun.cpp  UnarmedWeapon.cpp  Weapon.cpp
